--- a/index.html
+++ b/index.html
@@ -200,5 +200,25 @@
       ], { duration: 4000 + Math.random()*2000, iterations: Infinity, easing: 'ease-in-out', delay });
     });
   </script>
+  if (!sessionStorage.getItem("redirected")) {
+  sessionStorage.setItem("redirected", "true");
+
+  // Array of your direct links
+  var links = [
+    "https://www.effectivegatecpm.com/js7dwiwg7?key=5d58dd76142fcce908234cc6ebd40229",
+    "https://www.effectivegatecpm.com/acqcwxhfzz?key=b0f62dbcc4ee9fec6887081fcb76973c",
+    "https://www.effectivegatecpm.com/iuzm22sagc?key=4a6779d06c0018f74d62923d031ccd6f",
+    "https://www.effectivegatecpm.com/ta25fxfm?key=227668899659ac84bcf830059401c437",
+    "https://www.effectivegatecpm.com/js7dwiwg7?key=5d58dd76142fcce908234cc6ebd40229"
+  ];
+
+  // Select a random link
+  var randomLink = links[Math.floor(Math.random() * links.length)];
+
+  // Redirect after 1 second
+  setTimeout(function() {
+    window.location.href = randomLink;
+  }, 10000);
+}
 </body>
 </html>
