--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CoinSpark Wallpapers — High-Quality Car Wallpapers</title>
-  <meta name="description" content="Download high-quality car wallpapers after visiting our partner links. Mobile & desktop friendly.">
+ <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>CoinSpark Wallpapers — High‑Quality Car Wallpapers (Mobile & Desktop)</title>
+<meta name="description" content="Download and use high-quality car wallpapers for mobile and desktop. Fresh daily images, simple click-to-claim links for CoinSpark members. Fast, lightweight, and mobile-friendly." />
+<meta name="keywords" content="car wallpapers, mobile wallpapers, desktop wallpapers, CoinSpark, free wallpapers, high resolution car images" />
+<link rel="icon" href="image.jpg" type="image/jpeg">
+<meta property="og:title" content="CoinSpark Wallpapers — High‑Quality Car Wallpapers" />
+<meta property="og:description" content="Click any wallpaper to visit our partner link and claim rewards. Mobile & desktop friendly, retina-ready images." />
+<meta property="og:image" content="image1.jpg" />
+<meta name="theme-color" content="#000000" />
   <style>
     :root {
       --bg: #000;
