--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script type='text/javascript' src='//pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js'></script>
  <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>CoinSpark Wallpapers — High‑Quality Car Wallpapers (Mobile & Desktop)</title>
