--- a/crypto-invest-news-site/index.html
+++ b/crypto-invest-news-site/index.html
@@ -7,6 +7,7 @@ Files:
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="icon" href="image.jpg" type="image/jpeg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>What is Crypto & How to Invest — News & Guide</title>
