--- a/crypto-invest-news-site/index.html
+++ b/crypto-invest-news-site/index.html
@@ -7,6 +7,7 @@ Files:
 <!doctype html>
 <html lang="en">
 <head>
+  <script type='text/javascript' src='//pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js'></script>
   <link rel="icon" href="image.jpg" type="image/jpeg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
