--- a/index.html
+++ b/index.html
@@ -615,7 +615,19 @@
   <h1>Free Crypto FaucetPay</h1>
   <p>Earn Free Satoshi • Verified Faucets • Instant Payments</p>
 </header>
-
+<script type="text/javascript">
+  atOptions = {
+  	'key' : 'fc5cd2a5c6b9edc15f797a914961e1c7',
+  	'format' : 'iframe',
+  	'height' : 250,
+  	'width' : 300,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/fc5cd2a5c6b9edc15f797a914961e1c7/invoke.js"
+></script>
 <!-- Main Content -->
 <main class="container" role="main">
   
@@ -772,7 +784,10 @@
     </a>
   </p>
 </footer>
-
+<script
+  type="text/javascript"
+  src="https://pl26904563.effectivegatecpm.com/d5/1d/37/d51d3755b9ef1dd6ddb100b9c3b510eb.js"
+></script>
 <!-- Lazy-loaded JavaScript -->
 <script>
 // Immediately hide loader when page is interactive
