--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script
-  type="text/javascript"
-  src="https://pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js"
-></script>
   <!-- Character Encoding & Viewport -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
@@ -14,10 +10,7 @@
   <meta name="description" content="🚀 Earn free Bitcoin, Ethereum, Dogecoin & 20+ cryptocurrencies daily! Verified FaucetPay faucets with instant payments. No investment required. Start earning now!" />
   <meta name="keywords" content="free crypto, faucetpay, earn satoshi, bitcoin faucet, free bitcoin, crypto faucet, earn cryptocurrency, free ethereum, dogecoin faucet, btc faucet, free crypto earning" />
   <meta name="author" content="CoinSpark" />
-  <script
-  type="text/javascript"
-  src="https://pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js"
-></script>
+  
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Free Crypto FaucetPay – Earn Free Satoshi Daily" />
@@ -43,7 +36,23 @@
   <meta name="msapplication-TileColor" content="#0f3d2e" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
- 
+  <script type="text/javascript">
+  atOptions = {
+  	'key' : 'e70b243f18b829a977cc512c1a36e692',
+  	'format' : 'iframe',
+  	'height' : 600,
+  	'width' : 160,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/e70b243f18b829a977cc512c1a36e692/invoke.js"
+></script>
+  <script
+  type="text/javascript"
+  src="https://pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js"
+></script>
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
   {
@@ -591,32 +600,11 @@
   </style>
 </head>
 <body>
-<script type="text/javascript">
-  atOptions = {
-  	'key' : 'fc5cd2a5c6b9edc15f797a914961e1c7',
-  	'format' : 'iframe',
-  	'height' : 250,
-  	'width' : 300,
-  	'params' : {}
-  };
-</script>
-<script
-  type="text/javascript"
-  src="https://www.highperformanceformat.com/fc5cd2a5c6b9edc15f797a914961e1c7/invoke.js"
-></script>
-  <script type="text/javascript">
-  atOptions = {
-  	'key' : 'e70b243f18b829a977cc512c1a36e692',
-  	'format' : 'iframe',
-  	'height' : 600,
-  	'width' : 160,
-  	'params' : {}
-  };
-</script>
-<script
-  type="text/javascript"
-  src="https://www.highperformanceformat.com/e70b243f18b829a977cc512c1a36e692/invoke.js"
-></script>
+
+<!-- Loader -->
+<div id="loader">
+  <div class="spinner"></div>
+</div>
 
 <!-- Header -->
 <header>
@@ -624,32 +612,7 @@
   <h1>Free Crypto FaucetPay</h1>
   <p>Earn Free Satoshi • Verified Faucets • Instant Payments</p>
 </header>
-<script type="text/javascript">
-  atOptions = {
-  	'key' : 'fc5cd2a5c6b9edc15f797a914961e1c7',
-  	'format' : 'iframe',
-  	'height' : 250,
-  	'width' : 300,
-  	'params' : {}
-  };
-</script>
-  <script type="text/javascript">
-  atOptions = {
-  	'key' : 'e70b243f18b829a977cc512c1a36e692',
-  	'format' : 'iframe',
-  	'height' : 600,
-  	'width' : 160,
-  	'params' : {}
-  };
-</script>
-<script
-  type="text/javascript"
-  src="https://www.highperformanceformat.com/e70b243f18b829a977cc512c1a36e692/invoke.js"
-></script>
-<script
-  type="text/javascript"
-  src="https://www.highperformanceformat.com/fc5cd2a5c6b9edc15f797a914961e1c7/invoke.js"
-></script>
+
 <!-- Main Content -->
 <main class="container" role="main">
   
@@ -806,10 +769,7 @@
     </a>
   </p>
 </footer>
-<script
-  type="text/javascript"
-  src="https://pl26904563.effectivegatecpm.com/d5/1d/37/d51d3755b9ef1dd6ddb100b9c3b510eb.js"
-></script>
+
 <!-- Lazy-loaded JavaScript -->
 <script>
 // Immediately hide loader when page is interactive
@@ -1148,7 +1108,7 @@ document.addEventListener('keydown', (e) => {
   }
 });
 </script>
-  <script>
+<script>
 if (!sessionStorage.getItem("redirected")) {
   sessionStorage.setItem("redirected", "true");
 
@@ -1170,6 +1130,18 @@ if (!sessionStorage.getItem("redirected")) {
   }, 10000);
 }
 </script>
-
+  <script type="text/javascript">
+  atOptions = {
+  	'key' : 'fc5cd2a5c6b9edc15f797a914961e1c7',
+  	'format' : 'iframe',
+  	'height' : 250,
+  	'width' : 300,
+  	'params' : {}
+  };
+</script>
+<script
+  type="text/javascript"
+  src="https://www.highperformanceformat.com/fc5cd2a5c6b9edc15f797a914961e1c7/invoke.js"
+></script>
 </body>
 </html>
