--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     }
   }
   </script>
-  
+    type="text/javascript"
+  src="https://pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js"
+></script>
   <!-- Favicon -->
   <link rel="icon" type="image/jpg" href="image.jpg" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -583,14 +585,7 @@
       }
     }
   </style>
-   <script
-  type="text/javascript"
-  src="https://pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js"
-></script>
-  <script
-  type="text/javascript"
-  src="https://pl26626388.effectivegatecpm.com/57/2d/ea/572dea52478fbec7bf7008039c1df4b9.js"
-></script>
+   <script>
 </head>
 <body>
 
